--- a/blog/what-would-a-utopia-look-like/styles.css
+++ b/blog/what-would-a-utopia-look-like/styles.css
@@ -90,8 +90,11 @@
 
 .content a {
 	text-decoration: none;
-	font-family: Spectral-Medium;
 	color: #707070;
+}
+
+.content a:hover {
+	color: #404040;
 }
 
 
